<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/default_fragment"
            android:title="首页"/>
        <item
            android:id="@+id/station_query"
            android:title="@string/station_query"/>
        <item
            android:id="@+id/train_query"
            android:title="@string/train_query"/>

        <item android:title="@string/others">
            <menu>
                <item
                    android:id="@+id/about"
                    android:title="@string/about"/>
                <item
                    android:id="@+id/license"
                    android:title="@string/license"/>
                <item
                    android:id="@+id/support"
                    android:title="@string/support"/>
            </menu>
        </item>
    </group>
</menu>