<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="关于"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <com.recker.flyshapeimageview.ShapeImageView
                android:id="@+id/app_icon"
                android:layout_gravity="center_horizontal"
                android:layout_width="@dimen/dp60"
                android:layout_height="@dimen/dp60"
                android:src="@drawable/app_icon"
                app:shape_mode="shape"
                app:frame_width="@dimen/dp1"/>
            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/app_name"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp5"
                android:text="@string/app_version"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/app_function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp30"
                android:layout_marginLeft="@dimen/dp30"
                android:layout_marginRight="@dimen/dp30"
                android:text="主要功能如下："
                android:textSize="16sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginLeft="@dimen/dp30"
                android:layout_marginRight="@dimen/dp30">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/point1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/func_paragraph"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/function1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/point1"
                        android:text="功能1"
                        android:textSize="16sp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/point2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/func_paragraph"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/function2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/point2"
                        android:text="功能2"
                        android:textSize="16sp"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp30"
                android:layout_marginLeft="@dimen/dp30"
                android:layout_marginRight="@dimen/dp30">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_author"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/app_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_author_name"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp5"
                android:layout_marginLeft="@dimen/dp30"
                android:layout_marginRight="@dimen/dp30">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_github"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/app_github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_github_addr"
                    android:textSize="16sp"
                    android:autoLink="web"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp5"
                android:layout_marginLeft="@dimen/dp30"
                android:layout_marginRight="@dimen/dp30">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_csdn"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/app_csdn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_csdn_addr"
                    android:textSize="16sp"
                    android:autoLink="web"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp5"
                android:layout_marginLeft="@dimen/dp30"
                android:layout_marginRight="@dimen/dp30">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_blog"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/app_blog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_blog_addr"
                    android:textSize="16sp"
                    android:autoLink="web"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>