<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_start_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp200"
        android:background="@drawable/a_shape_edittext">

        <TextView
            android:id="@+id/tv_start_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/dp15"
            android:paddingStart="@dimen/dp30"
            android:paddingTop="@dimen/dp15"
            android:text="@string/start_station"
            android:textColor="@color/black"
            android:textSize="@dimen/sp18"/>

        <View
            android:id="@+id/view_start_station"
            android:layout_width="1dip"
            android:layout_height="@dimen/dp20"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp10"
            android:layout_toEndOf="@id/tv_start_station"
            android:background="@color/colorCursor" />

        <AutoCompleteTextView
            android:id="@+id/tv_start_station_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp30"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp10"
            android:layout_toEndOf="@id/view_start_station"
            android:background="@null"
            android:ems="19"
            android:hint="@string/input_start_station"
            android:inputType="text"
            android:textColorHint="@color/colorCursor"
            android:textCursorDrawable="@drawable/a_color_cursor"
            android:textSize="@dimen/sp18"
            android:completionThreshold="1"/>

        <ImageView
            android:id="@+id/iv_start_station_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp20"
            android:src="@mipmap/ic_delete"
            android:visibility="invisible"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_end_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_start_station"
        android:layout_marginTop="@dimen/dp1"
        android:background="@drawable/a_shape_edittext">

        <TextView
            android:id="@+id/tv_end_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/dp15"
            android:paddingStart="@dimen/dp30"
            android:paddingTop="@dimen/dp15"
            android:text="@string/end_station"
            android:textColor="@color/black"
            android:textSize="@dimen/sp18"/>

        <View
            android:id="@+id/view_end_station"
            android:layout_width="1dip"
            android:layout_height="@dimen/dp20"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp10"
            android:layout_toEndOf="@id/tv_end_station"
            android:background="@color/colorCursor"/>

        <AutoCompleteTextView
            android:id="@+id/tv_end_station_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp30"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp10"
            android:layout_toEndOf="@id/view_end_station"
            android:background="@null"
            android:drawablePadding="@dimen/dp5"
            android:ems="19"
            android:hint="@string/input_end_station"
            android:inputType="text"
            android:textColorHint="@color/colorCursor"
            android:textCursorDrawable="@drawable/a_color_cursor"
            android:textSize="@dimen/sp18"
            android:completionThreshold="1"/>

        <ImageView
            android:id="@+id/iv_end_station_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp20"
            android:src="@mipmap/ic_delete"
            android:visibility="invisible"/>
    </RelativeLayout>

    <CheckBox
        android:id="@+id/cb_is_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_end_station"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/dp10"
        android:checked="false"
        android:duplicateParentState="false"
        android:text="@string/only_high"
        android:textColor="@color/gray_0"
        android:textSize="@dimen/sp15"/>

    <Button
        android:id="@+id/btn_station_search"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_is_high"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginStart="@dimen/dp30"
        android:layout_marginEnd="@dimen/dp30"
        android:gravity="center"
        android:text="@string/search" />

</RelativeLayout>
